# tetris_linux

./: .gitignore  CMakeLists.txt  README.md
include/: TetrisBlock.h  TetrisColor.h  TetrisGame.h  TetrisInput.h  TetrisStart.h  TetrisTerminal.h
src/: TetrisBlock.cpp  TetrisGame.cpp  TetrisInput.cpp  TetrisInterface.cpp  TetrisStart.cpp  main.cpp  past_tetris.cpp
